# sample-fsx-viewer

./: .gitignore  ATTRIBUTION.md  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  todo
fsx_viewer/: __init__.py  __main__.py  aws_client.py  cli.py  controller.py  model.py  pricing_data.json  test_detail_properties.py  test_properties.py  ui.py
